crates/analyzer/tests/snapshots/errors__duplicate_field_in_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate field names in `contract Foo`
  ┌─ compile_errors/duplicate_field_in_contract.fe:2:5
  │
2 │     bar: u8
  │     ^^^^^^^ `bar` first defined here
3 │     bar: u8
  │     ------- `bar` redefined here


